--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
 	<div class="part">
 		<div class="wrapper wrapper2">
 			<div>
-				<img src="img/asset1.png">
+				<img src="img/Asset1.png">
 				<h3>4 weken</h3>
 				<p class="details">Afgelopen <strong>4 weken</strong> zijn jullie de uitdaging aangegaan</p>
 			</div>
 			<div>
-				<img src="img/asset3.png">
+				<img src="img/Asset3.png">
 				<h3>300 minuten</h3>
 				<p class="details">Jullie moesten <strong>300 loopminuten</strong> verzamelen via de Rise en Run challenge</p>
 			</div>
 			<div>
-				<img src="img/asset2.png">
+				<img src="img/Asset2.png">
 				<h3>272 deelnemers</h3>
 				<p class="details"><strong>272 werknemers</strong> namen deel aan de challenge</p>
 			</div>
@@ -58,7 +58,7 @@
 				<p class="details"><strong>136 deelnemers</strong> hebben de uitdaging volbracht</p>
 			</div>
 			<div>
-				<img src="img/asset5.png">
+				<img src="img/Asset5.png">
 				<h3>14 163 km</h3>
 				<p class="details">Er werd in totaal <strong>14 163 kilometer</strong> gelopen</p>
 			</div>
